apps/gotify/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: gotify
    app.kubernetes.io/part-of: gotify
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: gotify
      app.kubernetes.io/part-of: gotify
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: kustomize
        app.kubernetes.io/name: gotify
        app.kubernetes.io/part-of: gotify
    spec:
      containers:
        - name: gotify
          image: gotify/server:latest
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gotify-data
