apps/gotify/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: gotify
    app.kubernetes.io/part-of: gotify
spec:
  type: ClusterIP
  clusterIP: 10.43.200.50
  selector:
    app.kubernetes.io/name: gotify
    app.kubernetes.io/part-of: gotify
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
